--- a/enfi-framework/assets/css/backend.css
+++ b/enfi-framework/assets/css/backend.css
@@ -27,6 +27,7 @@
     background-color: white;
     margin-bottom: 40px;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 .ef-dashboard-head .icon {
