--- a/enfi-framework/assets/css/backend.css
+++ b/enfi-framework/assets/css/backend.css
@@ -25,9 +25,13 @@
     margin-left: -20px;
     padding: 40px 0;
     background-color: white;
-    margin-bottom: 40px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.ef-dashboard-head h1 {
+    font-weight: normal;
 }
 
 .ef-dashboard-head .icon {
@@ -50,6 +54,15 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.ef-dashboard-content h2,
+.ef-dashboard-content h3,
+.ef-dashboard-content h4,
+.ef-dashboard-content h5 {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+
 
 /* dashboard mainpage cards */
 
@@ -59,6 +72,7 @@
         grid-gap: 20px;
         grid-template-columns: 20% 20% 20% 20%;
         justify-content: center;
+        padding: 40px 0;
     }
 }
 
@@ -68,6 +82,7 @@
         grid-gap: 20px;
         grid-template-columns: 30% 30% 30%;
         justify-content: center;
+        padding: 40px 0;
     }
 }
 
@@ -77,6 +92,7 @@
         grid-gap: 20px;
         grid-template-columns: 80%;
         justify-content: center;
+        padding: 40px 0;
     }
 }
 
@@ -86,7 +102,6 @@
     min-height: 200px;
     text-align: center;
     border-radius: 4px;
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
 }
 
 .ef-dashboard-card:hover {
@@ -100,6 +115,7 @@
     font-weight: normal;
     font-size: 1.2rem;
     letter-spacing: 0;
+    margin: 15px 0;
 }
 
 .ef-dashboard-card:hover h3 {
@@ -112,9 +128,11 @@
 @media only screen and (min-width: 1367px) {
     .ef-dashboard-settings-page {
         display: grid;
-        grid-gap: 20px;
-        grid-template-columns: 20% 60%;
+        grid-gap: 40px;
+        grid-template-columns: 15% 65%;
         justify-content: center;
+        background: white;
+        padding: 40px 0;
     }
 }
 
@@ -124,6 +142,8 @@
         grid-gap: 20px;
         grid-template-columns: 20% 60%;
         justify-content: center;
+        background: white;
+        padding: 40px 0;
     }
 }
 
@@ -133,10 +153,15 @@
         grid-gap: 20px;
         grid-template-columns: 80%;
         justify-content: center;
+        background: white;
+        padding: 40px 0;
     }
 }
 
-.ef-dashboard-settings-page .navigation {}
+.ef-dashboard-settings-page>.navigation {
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    padding-right: 40px;
+}
 
 .ef-dashboard-settings-page .content {}
 
@@ -144,12 +169,11 @@
 /* dashboard settings table */
 
 .ef-admin-form-settings>h2 {
-    background: white;
-    padding: 16px;
+    padding: 16px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     margin: 0px;
-    font-size: 0.9rem;
-    font-weight: bold;
+    font-size: 1.4rem;
+    font-weight: normal;
 }
 
 .ef-admin-table,
@@ -158,7 +182,6 @@
     padding: 0px;
     border-collapse: collapse;
     width: 100%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .ef-admin-table .left {
@@ -176,7 +199,6 @@
 
 .ef-admin-table th,
 .ef-admin-form-settings .form-table th {
-    background-color: white;
     color: rgba(0, 0, 0, 0.6);
     padding: 16px 10px;
     margin: 1px;
@@ -184,7 +206,6 @@
 
 .ef-admin-table td,
 .ef-admin-form-settings .form-table td {
-    background-color: white;
     color: rgba(0, 0, 0, 0.6);
     padding: 5px;
 }
@@ -193,13 +214,9 @@
 .ef-admin-form-settings .form-table tr:nth-child(even) th {}
 
 .ef-admin-form-settings .form-table th {
-    background-color: white;
     color: rgba(0, 0, 0, 0.6);
     margin-bottom: 1px;
     vertical-align: middle;
-    padding-left: 20px;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    font-size: 0.8rem;
     font-weight: normal;
 }
 
@@ -252,13 +269,11 @@
 }
 
 .ef-dashboard-list-modules .info {
-    font-size: 0.8rem;
     color: rgba(255, 255, 255, 0.6);
     display: none;
 }
 
 .ef-dashboard-list-modules .description {
-    font-size: 0.8rem;
     color: rgba(0, 0, 0, 0.6);
     display: inline;
 }
@@ -278,16 +293,16 @@
 
 .ef-dashboard-side-navigation {
     margin-bottom: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .ef-dashboard-side-navigation .head {
     display: block;
-    padding: 16px 12px;
-    background-color: white;
+    padding: 16px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     color: rgba(0, 0, 0, 0.8);
     text-decoration: none;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
 }
 
 .ef-dashboard-side-navigation .navigation {
@@ -297,24 +312,25 @@
     padding: 0;
 }
 
+.ef-dashboard-side-navigation .navigation .icon {
+    display: none;
+}
+
 .ef-dashboard-side-navigation .navigation li {
     margin: 0px;
     padding: 0px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: white;
 }
 
 .ef-dashboard-side-navigation .navigation a {
     display: block;
-    padding: 16px 12px;
+    padding: 10px 0;
     color: rgba(0, 0, 0, 0.4);
     text-decoration: none;
     margin: 0px;
 }
 
 .ef-dashboard-side-navigation .navigation li a.current {
-    color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 1);
 }
 
 .ef-dashboard-side-navigation .navigation li a:active,
@@ -327,17 +343,14 @@
 }
 
 .ef-dashboard-side-navigation .navigation li a:hover {
-    color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 1);
 }
 
 
 /* dashboard update check */
 
 .ef-update-version-check {
-    background: white;
     padding: 40px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .ef-update-version-check .version-container {
@@ -372,6 +385,7 @@
     padding: 10px 0;
     color: rgba(0, 0, 0, 0.4);
     margin: 0;
+    display: none;
 }
 
 .ef-admin-form-settings .ef-admin-input-text {
