--- a/enfi-framework/assets/css/backend.css
+++ b/enfi-framework/assets/css/backend.css
@@ -21,13 +21,32 @@
 
 /* dashboard head */
 
+body[class*="admin_page_ef-"],
+body[class*="toplevel_page_ef-"] {
+    font-size: 13px !important;
+}
+
+body[class*="admin_page_ef-"] .card {
+    margin: 0 !important;
+    position: relative !important;
+    margin-bottom: 20px !important;
+    padding: inherit !important;
+    min-width: inherit !important;
+    max-width: inherit !important;
+    box-shadow: inherit !important;
+    background: white !important;
+    box-sizing: unset !important;
+}
+
 .ef-dashboard-head {
     margin-left: -20px;
-    padding: 40px 0;
-    background-color: white;
+    padding: 20px 0;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    background: #fff;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    position: relative;
 }
 
 .ef-dashboard-head h1 {
@@ -50,8 +69,10 @@
 /* dashboard content */
 
 .ef-dashboard-content {
-    margin-left: -20px;
+    padding: 40px;
+    margin: 0 0 0 -20px;
     font-family: 'Roboto', sans-serif;
+    background: #f1f1f1;
 }
 
 .ef-dashboard-content h2,
@@ -98,16 +119,17 @@
 
 .ef-dashboard-card {
     padding: 40px;
-    background-color: white;
+    background-color: #fff;
     min-height: 200px;
     text-align: center;
     border-radius: 4px;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .ef-dashboard-card:hover {
     cursor: pointer;
     transition: 200ms;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: #343434;
     color: white;
 }
 
@@ -122,58 +144,65 @@
     color: white;
 }
 
+.ef-navigation-block {
+    margin-bottom: 40px;
+}
+
+.ef-navigation-block h4{
+    margin-bottom: 20px;
+}
 
 /* dashboard settigns page */
 
 @media only screen and (min-width: 1367px) {
     .ef-dashboard-settings-page {
         display: grid;
-        grid-gap: 40px;
-        grid-template-columns: 15% 65%;
+        grid-gap: 0px;
+        grid-template-columns: 20% 80%;
         justify-content: center;
-        background: white;
-        padding: 40px 0;
     }
 }
 
 @media only screen and (max-width:1366px) {
     .ef-dashboard-settings-page {
         display: grid;
-        grid-gap: 20px;
-        grid-template-columns: 20% 60%;
+        grid-gap: 0px;
+        grid-template-columns: 20% 80%;
         justify-content: center;
-        background: white;
-        padding: 40px 0;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .ef-dashboard-settings-page {
         display: grid;
-        grid-gap: 20px;
-        grid-template-columns: 80%;
+        grid-gap: 0px;
+        grid-template-columns: 100%;
         justify-content: center;
-        background: white;
-        padding: 40px 0;
     }
 }
 
 .ef-dashboard-settings-page>.navigation {
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    padding-right: 40px;
+    padding-top: 20px;
+    background: #e0e0e0;
 }
 
-.ef-dashboard-settings-page .content {}
+.ef-dashboard-settings-page .content {
+    padding: 40px;
+}
 
 
 /* dashboard settings table */
 
 .ef-admin-form-settings>h2 {
-    padding: 16px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    margin: 0px;
-    font-size: 1.4rem;
-    font-weight: normal;
+    padding: 16px 20px;
+    margin: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    background: #fff;
+}
+
+.ef-admin-table-modules td,
+.ef-admin-table-modules th {
+    padding: 15px !important;
 }
 
 .ef-admin-table,
@@ -194,27 +223,27 @@
 
 .ef-admin-table tr,
 .ef-admin-form-settings .form-table tr {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    background: white;
 }
 
 .ef-admin-table th,
 .ef-admin-form-settings .form-table th {
-    color: rgba(0, 0, 0, 0.6);
-    padding: 16px 10px;
+    padding: 16px 20px;
     margin: 1px;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .ef-admin-table td,
 .ef-admin-form-settings .form-table td {
+    padding: 0;
     color: rgba(0, 0, 0, 0.6);
-    padding: 5px;
 }
 
 .ef-admin-form-settings .form-table tr:nth-child(even) td,
 .ef-admin-form-settings .form-table tr:nth-child(even) th {}
 
 .ef-admin-form-settings .form-table th {
-    color: rgba(0, 0, 0, 0.6);
     margin-bottom: 1px;
     vertical-align: middle;
     font-weight: normal;
@@ -229,10 +258,7 @@
 
 /* dashboard footer */
 
-.ef-dashboard-footer {
-    margin-left: -20px;
-    padding: 40px;
-}
+.ef-dashboard-footer {}
 
 
 /* dashboard list modules */
@@ -274,7 +300,7 @@
 }
 
 .ef-dashboard-list-modules .description {
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     display: inline;
 }
 
@@ -284,7 +310,7 @@
     border-radius: 5px;
     display: block;
     margin: 0 20px 20px 0;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     padding: 20px;
 }
 
@@ -297,9 +323,7 @@
 
 .ef-dashboard-side-navigation .head {
     display: block;
-    padding: 16px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    color: rgba(0, 0, 0, 0.8);
+    padding: 20px 20px 10px 20px;
     text-decoration: none;
     font-size: 1.2rem;
     margin-bottom: 10px;
@@ -312,9 +336,7 @@
     padding: 0;
 }
 
-.ef-dashboard-side-navigation .navigation .icon {
-    display: none;
-}
+.ef-dashboard-side-navigation .navigation .icon {}
 
 .ef-dashboard-side-navigation .navigation li {
     margin: 0px;
@@ -323,7 +345,7 @@
 
 .ef-dashboard-side-navigation .navigation a {
     display: block;
-    padding: 10px 0;
+    padding: 10px 20px;
     color: rgba(0, 0, 0, 0.4);
     text-decoration: none;
     margin: 0px;
@@ -331,6 +353,7 @@
 
 .ef-dashboard-side-navigation .navigation li a.current {
     color: rgba(0, 0, 0, 1);
+    background: #f1f1f1;
 }
 
 .ef-dashboard-side-navigation .navigation li a:active,
@@ -344,6 +367,22 @@
 
 .ef-dashboard-side-navigation .navigation li a:hover {
     color: rgba(0, 0, 0, 1);
+    background: #f1f1f1;
+}
+
+.ef-dashboard-submit-btn {
+    display: block !important;
+    width: 100%!important;
+    background: #447c99 !important;
+    color: rgba(255, 255, 255, 0.6) !important;
+    border: 0 !important;
+    outline: 0 !important;
+    box-shadow: none !important;
+    text-align: left !important;
+    padding: 12px 24px !important;
+    margin: 15px 0 !important;
+    height: unset !important;
+    border-radius: 0 !important;
 }
 
 
@@ -383,7 +422,7 @@
 
 .ef-admin-form-settings .description {
     padding: 10px 0;
-    color: rgba(0, 0, 0, 0.4);
+    color: rgba(255, 255, 255, 0.4);
     margin: 0;
     display: none;
 }
@@ -392,7 +431,7 @@
     padding: 10px 0;
     width: 100%;
     background-color: transparent !important;
-    color: rgba(0, 0, 0, 0.6) !important;
+    color: rgba(255, 255, 255, 0.6) !important;
     border: unset !important;
     outline: none !important;
     box-shadow: unset !important;
@@ -406,7 +445,7 @@
 }
 
 .ef-admin-form-settings .ef-admin-input-text::placeholder {
-    color: rgba(0, 0, 0, 0.2) !important;
+    color: rgba(255, 255, 255, 0.2) !important;
 }
 
 
@@ -417,9 +456,10 @@
     padding: 10px 0;
     border: unset !important;
     box-shadow: none;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     height: unset !important;
     cursor: pointer;
+    background: #242424;
 }
 
 .ef-admin-form-settings .ef-admin-input-selection option {
@@ -427,7 +467,8 @@
     padding: 20px;
     border: unset !important;
     box-shadow: none;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
+    background: #242424;
 }
 
 
@@ -443,19 +484,20 @@
     width: 80%;
     border: none;
     box-shadow: none;
-    color: rgba(0, 0, 0, 0.6) !important;
+    color: rgba(255, 255, 255, 0.6) !important;
     padding: 10px;
+    background-color: #242424;
 }
 
 .ef-admin-form-settings .ef-admin-input-list input::placeholder {
-    color: rgba(0, 0, 0, 0.2) !important;
+    color: rgba(255, 255, 255, 0.2) !important;
 }
 
 .ef-admin-form-settings .ef-admin-input-list .add {
     display: inline-block;
     padding: 10px;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(255, 255, 255, 0.3) !important;
     transition: 200ms;
 }
 
@@ -465,11 +507,11 @@
 }
 
 .ef-admin-form-settings .ef-admin-input-list .remove {
-    border-right: 1px solid rgba(0, 0, 0, 0.05);
+    border-right: 1px solid #343434;
     display: inline-block;
     padding: 10px;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.2);
+    color: rgba(255, 255, 255, 0.6) !important;
 }
 
 .ef-admin-form-settings .ef-admin-input-list .remove:hover {
@@ -478,11 +520,11 @@
 }
 
 .ef-admin-form-settings .ef-admin-input-list .remove-disable {
-    border-right: 1px solid rgba(0, 0, 0, 0.05);
+    border-right: 1px solid #343434;
     display: inline-block;
     padding: 10px;
     cursor: not-allowed;
-    color: rgba(0, 0, 0, 0.2);
+    color: rgba(255, 255, 255, 0.6) !important;
 }
 
 .ef-admin-form-settings .ef-admin-input-list .move {
@@ -490,7 +532,7 @@
     display: inline-block;
     padding: 10px;
     cursor: move;
-    color: rgba(0, 0, 0, 0.2);
+    color: rgba(255, 255, 255, 0.6) !important;
 }
 
 .ef-admin-form-settings .ef-admin-input-list .move:hover {
@@ -509,12 +551,12 @@
 .ef-admin-form-settings .ef-admin-input-image-set {
     width: calc(100% - 4px);
     height: 160px;
-    border: 2px dashed rgba(0, 0, 0, 0.2);
+    border: 2px dashed #343434;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color: rgba(0, 0, 0, 0.4);
+    color: #343434;
     font-size: 2rem;
     cursor: pointer;
     background-position: center;
@@ -532,24 +574,19 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     font-size: 2rem;
 }
 
 .ef-admin-form-settings .ef-admin-input-image-remove {
-    padding: 6px;
     text-align: center;
-    background-color: rgba(255, 0, 0, 0.6);
-    display: block;
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: bold;
+    color: rgba(255, 0, 0, 0.6);
     cursor: pointer;
+    display: inline-block;
+    margin-top: 10px;
 }
 
-.ef-admin-form-settings .ef-admin-input-image-remove:hover {
-    background-color: rgba(255, 0, 0, 1);
-    color: white;
-}
+.ef-admin-form-settings .ef-admin-input-image-remove:hover {}
 
 
 /* button group */
@@ -557,8 +594,8 @@
 .ef-admin-form-settings .ef-admin-input-button-group a {
     display: inline-block;
     padding: 10px 0;
-    color: rgba(0, 0, 0, 0.8);
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    color: rgba(255, 255, 255, 0.8);
+    border-right: 1px solid #343434;
     text-align: center;
 }
 
@@ -567,12 +604,12 @@
 }
 
 .ef-admin-form-settings .ef-admin-input-button-group a:hover {
-    background-color: rgba(0, 0, 0, .1);
+    background-color: #343434;
     cursor: pointer;
 }
 
 .ef-admin-form-settings .ef-admin-input-button-group a.current {
-    background-color: rgba(0, 0, 0, .6);
+    background-color: #343434;
     color: white;
 }
 
@@ -588,7 +625,7 @@
 .ef-admin-form-settings .ef-admin-input-button-group-vertical a {
     display: block;
     padding: 20px 20px;
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(255, 255, 255, 0.8);
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     text-align: left;
 }
@@ -617,87 +654,53 @@
 /* checkbox */
 
 .ef-admin-form-settings .ef-admin-input-checkbox {
-    position: relative;
-    padding-left: 30px;
-    cursor: pointer;
-    margin-left: 20px;
-    padding: 30px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    color: rgba(0, 0, 0, 0.4);
-    font-size: 0.9rem;
-}
-
-
-/* Hide the browser's default checkbox */
-
-.ef-admin-form-settings .ef-admin-input-checkbox input {
     position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
+    left: -9999px;
 }
 
-
-/* Create a custom checkbox */
-
-.ef-admin-form-settings .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 18px;
-    width: 18px;
-    /* background-color: rgba(0, 0, 0, .1); */
-    border: 2px solid rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
-}
-
-
-/* On mouse-over, add a grey background color */
-
-.ef-admin-form-settings .ef-admin-input-checkbox :hover input~.checkmark {
-    background-color: #1f1d1d;
-}
-
-
-/* When the checkbox is checked, add a blue background */
-
-.ef-admin-form-settings .ef-admin-input-checkbox input:checked~.checkmark {
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-
-/* Create the checkmark/indicator (hidden when not checked) */
-
-.ef-admin-form-settings .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-
-
-/* Show the checkmark when checked */
-
-.ef-admin-form-settings .ef-admin-input-checkbox input:checked~.checkmark:after {
+.ef-admin-form-settings .ef-admin-input-checkbox-label {
     display: block;
+    position: relative;
+    padding: 10px 30px 10px 60px;
+    white-space: nowrap;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color .2s;
+    width: calc(100% - 94px);
+    margin-left: -40px;
 }
 
+.ef-admin-form-settings .ef-admin-input-checkbox-label::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 12px;
+    bottom: 10px;
+    left: 27px;
+    width: 12px;
+    height: 12px;
+    transition: background-color .2s;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
 
-/* Style the checkmark/indicator */
+.ef-admin-form-settings .ef-admin-input-checkbox-label:first-of-type {
+    transform: translateX(-40px);
+}
 
-.ef-admin-form-settings .ef-admin-input-checkbox .checkmark:after {
-    left: 6px;
-    top: 2px;
-    width: 3px;
-    height: 7px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+.ef-admin-form-settings .ef-admin-input-checkbox-label:last-of-type {
+    transform: translateX(40px);
+}
+
+.ef-admin-form-settings .ef-admin-input-checkbox-label:hover,
+.ef-admin-form-settings .ef-admin-input-checkbox:focus+.ef-admin-form-settings .ef-admin-input-checkbox-label {}
+
+.ef-admin-form-settings .ef-admin-input-checkbox:checked+label {
+    /* background-color: #343434; */
+}
+
+.ef-admin-form-settings .ef-admin-input-checkbox:checked+label::before {
+    background-color: green;
 }
 
 
@@ -711,11 +714,19 @@
 }
 
 .ef-admin-form-settings .ef-admin-input-checkbox-group .item {
-    padding: 8px 0px;
+    padding: 0px 0px;
 }
 
 .ef-admin-form-settings .ef-admin-input-checkbox-group .item:last-child {
-    padding: 8px 0px;
+    padding: 0px 0px;
+}
+
+.ef-admin-form-settings .ef-admin-input-checkbox-group .ef-admin-input-checkbox-label {
+    padding: 0px 30px 0px 60px !important;
+}
+
+.ef-admin-form-settings .ef-admin-input-checkbox-group .ef-admin-input-checkbox-label::before {
+    top: 3px !important;
 }
 
 
@@ -769,7 +780,7 @@
     border: 1px solid #ddd;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
     margin: 0 0 0 3px;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .ef-admin-form-meta-box .ef-admin-input-list .remove:hover {
@@ -791,7 +802,7 @@
     border: 1px solid #ddd;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
     margin: 0 0 0 3px;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     cursor: move;
 }
 
@@ -834,7 +845,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     font-size: 2rem;
 }
 
@@ -861,8 +872,8 @@
     background-color: rgba(0, 0, 0, .05);
     border: 0px;
     padding: 6px 15px;
-    color: rgba(0, 0, 0, 0.8);
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    color: rgba(255, 255, 255, 0.8);
+    border-right: 1px solid #343434;
 }
 
 .ef-admin-form-meta-box .ef-admin-input-button-group a i {
@@ -977,9 +988,9 @@
 }
 
 .ef-admin-form-meta-box .ef-admin-input-checkbox-group .item {
-    padding: 8px 0px;
+    padding: 0px 0px;
 }
 
 .ef-admin-form-meta-box .ef-admin-input-checkbox-group .item:last-child {
-    padding: 8px 0px;
+    padding: 0px 0px;
 }
