--- a/assets/css/cookie-law.css
+++ b/assets/css/cookie-law.css
@@ -1,36 +1,47 @@
 @media only screen and (min-width: 992px) {
-    .ef-cookieconsent-blur-bg {
+
+    .ef-cookie-consent {
+
+    }
+
+    .ef-cookie-consent > .background {
         display: none;
-        background-color: white;
+        background-color: black;
         position: fixed;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.95;
+        opacity: 0.75;
         z-index: 9999999999;
     }
-    .ef-cookieconsent {
+
+    .ef-cookie-consent > .box {
         display: none;
         z-index: 99999999991;
-        position: fixed;
-        top: 0;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-    }
-    .ef-cookieconsent .content {
-        display: none;
-        padding: 60px;
         background: white;
+
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
+        max-width: 450px;
+        padding: 30px;
         -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
         box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+        border-radius: 6px;
     }
-    .ef-cookieconsent .title {
+
+    .ef-cookieconsent > .content {
+        display: none;
+    }
+
+    .ef-cookieconsent > .content .title {
         padding: 20px 0;
     }
-    .ef-cookieconsent .text {
+    .ef-cookieconsent > .content .text {
         padding: 20px 0;
         text-align: justify;
     }
